--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,99 +1,38 @@
-*{
-    // border: 1px solid red;
-}
 
 .header {
     height: 90px;
     background-color:#0C0707;
-    // background-color: gray;
     display: flex;
     align-items: center;
     padding: 2rem;
     box-sizing: border-box;
     justify-content: space-between;
-    // border: 1px solid red;
-
-
-
 
     .div1 {
-        // border: 1px solid black;
         width: 600px;
         margin: 1.5vmax;
-        // background-color: bisque;
         align-items: center;
-
-       
-
-       
-
+        color: white;
         
+
     }
 
     button{
-
         height: inherit;
-        // background-color: aqua;
         margin-top: 12px;
         font-size: 1.5rem;
         outline: none;
     }
-
-//     svg {
-//         color: red;
-//         // margin-top: 12px;
-//         font-size: 1.5rem;
-//         // margin-bottom: 0;
-//         cursor: pointer;
-//         // display: flex;
-//         height: 1.5rem;
-//         background-color: white;
-//         border: red solid 1px;
-
-//         &:hover {
-//             color: rgb(216, 216, 216);
-//         }
-//     }
-// }
-
-// .genreBox{
-//     overflow-x: auto;
-//     display: flex;
-//     height: 100px;
-//     background-color: rgb(16, 16, 16);
-
-
-
-    // >a{
-    //     color: black;
-    //     background-color: white;
-    //     border-radius: 5px;
-    //     padding: 1rem 0;
-    //     margin: 1rem;
-    //     transition: all 0.5s;
-    //     min-width: 10rem;
-    //     text-align: center;
-    //     text-decoration: none;
-
-    //     &:hover{
-    //         background-color: rgb(236, 236, 236);
-    //     }
-    // }
-
     
 }
 
 .div2{
     width: auto;
-    // background-color: aquamarine;
     align-items: center;
-    // border: 1px solid black;
-
-
+    
     input{
         height: auto;
         font-size: 1.5rem;
-        // background-color: red;
         margin-bottom: 10px;
         outline: none;
     }
@@ -112,3 +51,4 @@ a {
 img {
     height: 200%;
 }
+
