--- a/src/components/Register/signup.scss
+++ b/src/components/Register/signup.scss
@@ -1,13 +1,17 @@
 .outer{
-
     display: flex;
     align-items: center;
     justify-content: center;
 
     .inner{
-
         width: 60vw;
         height: 80vh;
     }
 
+}
+
+.error {
+    position: absolute;
+    color: red;
+    font-family: .6rem;
 }
